# HhParserAnalyzer

./: .gitignore  Makefile  Python.csv  README.md  bot.py  command.txt  hh_api.py  main.py  parser.py  pyproject.toml  statictic.py  test.py  vacancies.csv  vacancies.json  vacancies.txt
.github/workflows/: python-app.yml
data/api/: 1с.csv  Python.csv  Логист.csv  Психолог.csv  Сварщик.csv  Юрист.csv
data/api/test/: Python.csv
data/parser/: Java.csv
src/: main.py
src/hh_parser/: config.py  main.py  stats.py
src/hh_parser/parsers/: api_parser.py  html_parser.py
src/stats/: analyzer.py  cleaner.py  statistic.py  visualizer.py
test/stats/: test_analyzer.py  test_cleaner.py
tests/: test_api.py
