[project]
name = "hhparser"
version = "0.1.0"
description = ""
authors = [
    {name = "Weit145",email = "weit.dima@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
