[project]
name = "hhparser"
version = "0.1.0"
description = ""
authors = [
    {name = "Weit145",email = "weit.dima@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.4.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
